--- a/afores.html
+++ b/afores.html
@@ -13,6 +13,7 @@
             <li><a href="guia.html">Guia rapida</a></a></li>
             <li><a href="cetes.html">Fondos de deuda</a></a></li>
             <li><a href="bolsa.html">Bolsa</a></a></li>
+            <li><a href="cripto.html">Cripto</a></a></li>
         </ul>
         <h3>Que son las afores???</h3>
         <p>Las Administradoras de Fondos para el Retiro (AFORES) son instituciones financieras privadas de México, que administran fondos de retiro y ahorro de los trabajadores afiliados al Instituto Mexicano del Seguro Social y recientemente de los afiliados al Instituto de Seguridad y Servicios Sociales de los Trabajadores al Servicio del Estado. Fueron creadas por la Ley del Seguro Social de 1997 e iniciaron su operación el 1° de julio del mismo año.
