--- a/bolsa.html
+++ b/bolsa.html
@@ -9,9 +9,18 @@
         <h2>bolsa</h2>
         <ul>
             <li><a href="index.html">Home</a></a></li>
+            <li><a href="afores.html">Afores</a></a></li>
+            <li><a href="guia.html">Guia rapida</a></a></li>
             <li><a href="cetes.html">Fondos de deuda</a></a></li>
             <li><a href="bolsa.html">Bolsa</a></a></li>
+            <li><a href="cripto.html">Cripto</a></a></li>
         </ul>
-        <p>Esta es la pagina de bolsa.</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/TcEetvY8eAM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h3>Que es una accion?</h3>
+        <p>Una acción en el mercado financiero es un título emitido por una Sociedad Anónima o Sociedad comanditaria por acciones que representa el valor de una de las fracciones iguales en que se divide su capital social. Las acciones, generalmente, confieren a su titular (llamado accionista) derechos, como el de voto en la junta de accionistas de la entidad y económicos, como participar en los beneficios de la empresa.1​
+
+            Normalmente las acciones son transmisibles sin ninguna restricción; es decir, libremente.
+            
+            Como inversión, supone una inversión en renta variable, dado que no tiene un retorno fijo establecido por contrato, sino que depende de la buena marcha de la empresa y de su decisión de reparto de beneficios. </p>
     </body>
 </html>
