--- a/cetes.html
+++ b/cetes.html
@@ -9,9 +9,11 @@
         <h2>Cetes</h2>
         <ul>
             <li><a href="index.html">Home</a></a></li>
+            <li><a href="afores.html">Afores</a></a></li>
             <li><a href="guia.html">Guia rapida</a></a></li>
             <li><a href="cetes.html">Fondos de deuda</a></a></li>
             <li><a href="bolsa.html">Bolsa</a></a></li>
+            <li><a href="cripto.html">Cripto</a></a></li>
         </ul>
         <h3>Fondos de deuda</h3>
         <h4>¿Qué es la Deuda Gubernamental?</h4>
