--- a/guia.html
+++ b/guia.html
@@ -9,9 +9,11 @@
         <h2>Guia rapida</h2>
         <ul>
             <li><a href="index.html">Home</a></a></li>
+            <li><a href="afores.html">Afores</a></a></li>
             <li><a href="guia.html">Guia rapida</a></a></li>
             <li><a href="cetes.html">Fondos de deuda</a></a></li>
             <li><a href="bolsa.html">Bolsa</a></a></li>
+            <li><a href="cripto.html">Cripto</a></a></li>
         </ul>
         <p>El objetivo de invertir es poner el dinero que se ha ahorrado en cosas que van a adquirir más valor con el paso del tiempo. Algunas son acciones, bonos o bienes raíces. <br/>
             La clave es comprar cuando el precio es bajo y después tratar de vender cuando el precio es alto. Así es como se gana.
