--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <li><a href="guia.html">Guia rapida</a></a></li>
             <li><a href="cetes.html">Fondos de deuda</a></a></li>
             <li><a href="bolsa.html">Bolsa</a></a></li>
+            <li><a href="cripto.html">Cripto</a></a></li>
+            
         </ul>
         <h3>Sabias que....</h3>
         <h4>entre 70 y 80% del total de los 90,000 trabajadores de la primera generación afore no tendrán derecho a una pensión.</h4> 
