--- a/cetes.html
+++ b/cetes.html
@@ -61,6 +61,12 @@
         <p>Las empresas privadas recurren a varias fuentes cuando quieren financiar sus gastos. Las más importantes, por supuesto, son los ingresos que perciben de la venta de sus productos, o de la comercialización de sus servicios. Pero si estos ingresos no son suficientes para crecer, por ejemplo, pueden acudir a un banco para pedir un préstamo, y a cambio pagarán un interés. O pueden recurrir a una bolsa de valores, y ofrecer sus “acciones” en venta.<br/>
             Un fondo de inversión de renta variable contiene acciones de empresas listadas en bolsa, valores bancarios y deuda emitida por el gobierno y por las empresas privadas, para obtener rendimientos atractivos con riesgos moderados. Al combinar estos instrumentos, disminuye el riesgo de perder porque existe diversificación. Recuerda que no hay que meter todos los huevos de la gallina en la misma canasta.
         </p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/qIf8lhj42V8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </body>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/qIf8lhj42V8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br/>
+        <h7>Otra clase de fondos</h7>
+        <p>Fondos de cobertura<br/>
+        Fondos de Inversión de Deuda<br/>
+        ETF's (ver la seccion de bolsa)<br/>
+
+        </p>
+    </body>
 </html>
