--- a/cetes.html
+++ b/cetes.html
@@ -6,7 +6,7 @@
 
     <body>
         <h1>Inversiones</h1>
-        <h2>Cetes</h2>
+        <h2>Fondos de deuda</h2>
         <ul>
             <li><a href="index.html">Home</a></a></li>
             <li><a href="afores.html">Afores</a></a></li>
