--- a/afores.html
+++ b/afores.html
@@ -38,7 +38,7 @@ Retiro Cesantía y Vejez: en esta se depositan las cuotas y aportaciones obligat
     El trabajador: aportara el 1.125% sobre el salario base de cotización.<br/>
 
 En total a este fondo cada mes, ingresara entre un 6% y un 8% del salario base de cotización del trabajador, según el salario mensual de cada trabajador.<br/></p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/pGHGhILjMc0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/LjBgD3t5-_E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <h5>PPR o Plan Personal de Retiro</h5>
 <p> Plan Personal de Retiro<br/>
