--- a/afores.html
+++ b/afores.html
@@ -7,14 +7,14 @@
     <body>
         <h1>Inversiones</h1>
         <h2>Afores</h2>
-        <ul>
-            <li><a href="index.html">Home</a></a></li>
-            <li><a href="afores.html">Afores</a></a></li>
-            <li><a href="guia.html">Guia rapida</a></a></li>
-            <li><a href="cetes.html">Fondos de deuda</a></a></li>
-            <li><a href="bolsa.html">Bolsa</a></a></li>
-            <li><a href="cripto.html">Cripto</a></a></li>
-        </ul>
+        <nav>
+            <a href="index.html">Home</a></a>
+            <a href="afores.html">Afores</a></a>
+            <a href="guia.html">Guia rapida</a></a>
+            <a href="cetes.html">Fondos de deuda</a></a>
+            <a href="bolsa.html">Bolsa</a></a>
+            <a href="cripto.html">Cripto</a></a>
+        </nav>
         <h3>Que son las afores???</h3>
         <p>Las Administradoras de Fondos para el Retiro (AFORES) son instituciones financieras privadas de México, que administran fondos de retiro y ahorro de los trabajadores afiliados al Instituto Mexicano del Seguro Social y recientemente de los afiliados al Instituto de Seguridad y Servicios Sociales de los Trabajadores al Servicio del Estado. Fueron creadas por la Ley del Seguro Social de 1997 e iniciaron su operación el 1° de julio del mismo año.
 
