--- a/bolsa.html
+++ b/bolsa.html
@@ -7,14 +7,14 @@
     <body>
         <h1>Inversiones</h1>
         <h2>bolsa</h2>
-        <ul>
-            <li><a href="index.html">Home</a></a></li>
-            <li><a href="afores.html">Afores</a></a></li>
-            <li><a href="guia.html">Guia rapida</a></a></li>
-            <li><a href="cetes.html">Fondos de deuda</a></a></li>
-            <li><a href="bolsa.html">Bolsa</a></a></li>
-            <li><a href="cripto.html">Cripto</a></a></li>
-        </ul>
+        <nav>
+            <a href="index.html">Home</a></a>
+            <a href="afores.html">Afores</a></a>
+            <a href="guia.html">Guia rapida</a></a>
+            <a href="cetes.html">Fondos de deuda</a></a>
+            <a href="bolsa.html">Bolsa</a></a>
+            <a href="cripto.html">Cripto</a></a>
+        </nav>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/TcEetvY8eAM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <h3>¿Qué es un índice bursátil?  </h3>
         
@@ -78,11 +78,11 @@
             2.- Analisis tecnico<br/>
             3.- Macroeconomia<br/>
         </p>
-        <h6>Sabias que....</h6>
+        <p>Sabias que....</p>
         <p>Warren Buffett es considarado el mejor inversor de todos los tiempos.<br/>
             La rentabilidad histórica anualizada de Warren Buffett es del 20,8% frente al 9,7% del S&P 500. <br/>
             Un inversor que hubiese comprado acciones de Berkshire Hathaway en el año 1964, a cierre de 2016 habría multiplicado su inversión nada menos que 19.725 veces<br/>
-            El junto a su profesor benjamin graham son conciderados los padres del analisis fundamental
+            El junto a su profesor Benjamin Graham son conciderados los padres del Value investing
         </p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/yRr0_gJ-3mI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </body>
