--- a/cripto.html
+++ b/cripto.html
@@ -7,14 +7,14 @@
     <body>
         <h1>Inversiones</h1>
         <h2>Cripto</h2>
-        <ul>
-            <li><a href="index.html">Home</a></a></li>
-            <li><a href="afores.html">Afores</a></a></li>
-            <li><a href="guia.html">Guia rapida</a></a></li>
-            <li><a href="cetes.html">Fondos de deuda</a></a></li>
-            <li><a href="bolsa.html">Bolsa</a></a></li>
-            <li><a href="cripto.html">Cripto</a></a></li>
-        </ul>
+        <nav>
+            <a href="index.html">Home</a></a>
+            <a href="afores.html">Afores</a></a>
+            <a href="guia.html">Guia rapida</a></a>
+            <a href="cetes.html">Fondos de deuda</a></a>
+            <a href="bolsa.html">Bolsa</a></a>
+            <a href="cripto.html">Cripto</a></a>
+        </nav>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/dVKSMmGwD_4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p></p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/WzA-5jhan8w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
