--- a/cetes.html
+++ b/cetes.html
@@ -7,14 +7,14 @@
     <body>
         <h1>Inversiones</h1>
         <h2>Fondos de deuda</h2>
-        <ul>
-            <li><a href="index.html">Home</a></a></li>
-            <li><a href="afores.html">Afores</a></a></li>
-            <li><a href="guia.html">Guia rapida</a></a></li>
-            <li><a href="cetes.html">Fondos de deuda</a></a></li>
-            <li><a href="bolsa.html">Bolsa</a></a></li>
-            <li><a href="cripto.html">Cripto</a></a></li>
-        </ul>
+        <nav>
+            <a href="index.html">Home</a></a>
+            <a href="afores.html">Afores</a></a>
+            <a href="guia.html">Guia rapida</a></a>
+            <a href="cetes.html">Fondos de deuda</a></a>
+            <a href="bolsa.html">Bolsa</a></a>
+            <a href="cripto.html">Cripto</a></a>
+        </nav>
         <h3>Fondos de deuda</h3>
         <h4>¿Qué es la Deuda Gubernamental?</h4>
 
