--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <body>
         <h1>Inversiones</h1>
         <h2>Home</h2>
-        <ul>
-            <li><a href="index.html">Home</a></a></li>
-            <li><a href="afores.html">Afores</a></a></li>
-            <li><a href="guia.html">Guia rapida</a></a></li>
-            <li><a href="cetes.html">Fondos de deuda</a></a></li>
-            <li><a href="bolsa.html">Bolsa</a></a></li>
-            <li><a href="cripto.html">Cripto</a></a></li>
+        <nav>
+            <a href="index.html">Home</a></a>
+            <a href="afores.html">Afores</a></a>
+            <a href="guia.html">Guia rapida</a></a>
+            <a href="cetes.html">Fondos de deuda</a></a>
+            <a href="bolsa.html">Bolsa</a></a>
+            <a href="cripto.html">Cripto</a></a>
             
-        </ul>
+        </nav>
         <h3>Sabias que....</h3>
         <h4>entre 70 y 80% del total de los 90,000 trabajadores de la primera generación afore no tendrán derecho a una pensión.</h4> 
         <p>
