--- a/bolsa.html
+++ b/bolsa.html
@@ -82,7 +82,7 @@
         <p>Warren Buffett es considarado el mejor inversor de todos los tiempos.<br/>
             La rentabilidad histórica anualizada de Warren Buffett es del 20,8% frente al 9,7% del S&P 500. <br/>
             Un inversor que hubiese comprado acciones de Berkshire Hathaway en el año 1964, a cierre de 2016 habría multiplicado su inversión nada menos que 19.725 veces<br/>
-            El junto a su profesor Benjamin Graham son conciderados los padres del Value investing
+            Su profesor Benjamin Graham es considerado el padre del Value investing
         </p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/yRr0_gJ-3mI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </body>
