--- a/index.html
+++ b/index.html
@@ -1,19 +1,72 @@
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Inversiones</title> 
-    </head>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="utf-8">
+    <title>Inversiones</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f4f4f4; /* Puedes cambiar el color de fondo a tu gusto */
+            margin: 0;
+            padding: 0;
+        }
+
+        h1 {
+            color: #333; /* Puedes cambiar el color del texto a tu gusto */
+        }
+
+        nav {
+            background-color: #4285f4; /* Puedes cambiar el color de fondo de la barra de navegación */
+            padding: 10px;
+        }
+
+        nav a {
+            color: white; /* Puedes cambiar el color de los enlaces a tu gusto */
+            text-decoration: none;
+            margin: 0 10px;
+        }
+
+        h3 {
+            color: #333; /* Puedes cambiar el color del texto a tu gusto */
+        }
+
+        img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+            border-radius: 8px; /* Agrega esquinas redondeadas a las imágenes */
+            margin-top: 20px; /* Espacio superior entre las imágenes y el texto */
+        }
+
+        p {
+            margin-top: 10px;
+            color: #555; /* Puedes cambiar el color del texto a tu gusto */
+        }
+
+        a {
+            color: #4285f4; /* Puedes cambiar el color de los enlaces a tu gusto */
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+
 
     <body>
         <h1>Inversiones</h1>
         <h2>Home</h2>
         <nav>
             <a href="index.html">Home</a></a>
-            <a href="afores.html">Afores</a></a>
-            <a href="guia.html">Guia rapida</a></a>
-            <a href="cetes.html">Fondos de deuda</a></a>
-            <a href="bolsa.html">Bolsa</a></a>
-            <a href="cripto.html">Cripto</a></a>
+            <a href="/paginas/afores.html">Afores</a></a>
+            <a href="/paginas/guia.html">Guia rapida</a></a>
+            <a href="c/paginas/cetes.html">Fondos de deuda</a></a>
+            <a href="/paginas/bolsa.html">Bolsa</a></a>
+            <a href="/paginas/cripto.html">Cripto</a></a>
             
         </nav>
         <h3>Sabias que....</h3>
