--- a/paginas/bolsa.html
+++ b/paginas/bolsa.html
@@ -1,14 +1,65 @@
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Bolsa</title> 
-    </head>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="utf-8">
+    <title>Inversiones</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f4f4f4; /* Puedes cambiar el color de fondo a tu gusto */
+            margin: 0;
+            padding: 0;
+        }
 
+        h1 {
+            color: #333; /* Puedes cambiar el color del texto a tu gusto */
+        }
+
+        nav {
+            background-color: #4285f4; /* Puedes cambiar el color de fondo de la barra de navegación */
+            padding: 10px;
+        }
+
+        nav a {
+            color: white; /* Puedes cambiar el color de los enlaces a tu gusto */
+            text-decoration: none;
+            margin: 0 10px;
+        }
+
+        h3 {
+            color: #333; /* Puedes cambiar el color del texto a tu gusto */
+        }
+
+        img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+            border-radius: 8px; /* Agrega esquinas redondeadas a las imágenes */
+            margin-top: 20px; /* Espacio superior entre las imágenes y el texto */
+        }
+
+        p {
+            margin-top: 10px;
+            color: #555; /* Puedes cambiar el color del texto a tu gusto */
+        }
+
+        a {
+            color: #4285f4; /* Puedes cambiar el color de los enlaces a tu gusto */
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
     <body>
         <h1>Inversiones</h1>
         <h2>bolsa</h2>
         <nav>
-            <a href="index.html">Home</a></a>
+            <a href="../index.html">Home</a></a>
             <a href="afores.html">Afores</a></a>
             <a href="guia.html">Guia rapida</a></a>
             <a href="cetes.html">Fondos de deuda</a></a>
@@ -84,6 +135,6 @@
             Un inversor que hubiese comprado acciones de Berkshire Hathaway en el año 1964, a cierre de 2016 habría multiplicado su inversión nada menos que 19.725 veces<br/>
             Su profesor Benjamin Graham es considerado el padre del Value investing
         </p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/yRr0_gJ-3mI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/PyUDkM92oKM?si=oPm3iKo4xVwLI5xg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </body>
 </html>
