--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <a href="index.html">Home</a></a>
             <a href="/paginas/afores.html">Afores</a></a>
             <a href="/paginas/guia.html">Guia rapida</a></a>
-            <a href="c/paginas/cetes.html">Fondos de deuda</a></a>
+            <a href="/paginas/cetes.html">Fondos de deuda</a></a>
             <a href="/paginas/bolsa.html">Bolsa</a></a>
             <a href="/paginas/cripto.html">Cripto</a></a>
             
