--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
         <h2>Home</h2>
         <nav>
             <a href="index.html">Home</a></a>
-            <a href="/paginas/afores.html">Afores</a></a>
-            <a href="/paginas/guia.html">Guia rapida</a></a>
-            <a href="/paginas/cetes.html">Fondos de deuda</a></a>
-            <a href="/paginas/bolsa.html">Bolsa</a></a>
-            <a href="/paginas/cripto.html">Cripto</a></a>
+            <a href="afores.html">Afores</a></a>
+            <a href="guia.html">Guia rapida</a></a>
+            <a href="cetes.html">Fondos de deuda</a></a>
+            <a href="bolsa.html">Bolsa</a></a>
+            <a href="cripto.html">Cripto</a></a>
             
         </nav>
         <h3>Sabias que....</h3>
