--- a/paginas/afores.html
+++ b/paginas/afores.html
@@ -59,7 +59,7 @@
         <h1>Inversiones</h1>
         <h2>Afores</h2>
         <nav>
-            <a href="../index.html">Home</a></a>
+            <a href="index.html">Home</a></a>
             <a href="afores.html">Afores</a></a>
             <a href="guia.html">Guia rapida</a></a>
             <a href="cetes.html">Fondos de deuda</a></a>
